add final, official HTML elements DOCTYPE, head title, body

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,2 +1,22 @@
-<p>This is my first web page!</p>
-<p>Isn't it nice?</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web page #1!</title>
+  </head>
+  <body>
+    <h1>My first web page</h1>
+    <h2>Written with the guidance of Epicodus</h2>
+    <p>This is my first web page!</p>
+    <p>Isn't it nice?</p>
+    <p>Here are some things I', doing to learn about coding:</p>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>And a lot more!</li>
+    </ul>
+  </body>
+</html>
