--- a/favorite-things.html
+++ b/favorite-things.html
@@ -7,6 +7,7 @@
         <title>Michael's favorite Things</title>
     </head>
     <body>
+        <img src="https://cdn.britannica.com/25/7125-050-67ACEC3C/Abyssinian-sorrel.jpg" alt="">
         <h1>My favorite things</h1>
         <h2>These are a few of my favorite things.</h2>
         <h3>People</h3>
@@ -15,15 +16,15 @@
             <li>My borther Christopher</li>
             <li>My mom and dad:
                 <ul>
-                    <li>Steve</li>
-                    <li>Carol</li>
+                    <li><strong>Steve</strong></li>
+                    <li><em>Carol</em></li>
                 </ul>
             </li>
             <li>My friend Jessica</li>
             <li>My friend Candy</li>
         </ul>
         <h3>Flavors of ice cream</h3>
-        <p>These are my three favorites, in order:</p>
+        <a href="my-first-webpage.html"><p>These are my three favorites, in order:</p></a>
         <ol>
             <li>Pistachio</li>
             <li>Malted milk chocolate</li>
