Added Index, favorite-places, and style sheets
Co-authored-by: Chloe <yenchi.le1199@gmail.com>

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -8,6 +8,7 @@
         <title>Michael's favorite Things</title>
     </head>
     <body>
+        <a href="index.html"><h2>Back</h2></a>
         <img src="https://cdn.britannica.com/25/7125-050-67ACEC3C/Abyssinian-sorrel.jpg" alt="">
         <h1>My favorite things</h1>
         <h2>These are a few of my favorite things.</h2>
