--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/favorite-style.css" type="text/css">
     <title>Web page #1!</title>
   </head>
   <body>
+    <a href="index.html"><h2>Back</h2></a>
     <h1>My first web page</h1>
     <h2>Written with the guidance of Epicodus</h2>
     <p>This is my first web page!</p>
